# Pytorch_learning

./: .gitignore  03_auto_gradient.py  11_2_rnncell.py  12_2_hello_rnn.py  12_3_hello_rnn_seq.py  13_2_rnn_classification.py  13_3_char_rnn.py  14_2_seq2seq_att.py  README.md  bmp_calibration.txt  debug.cpp  image_data_00044292_R_python.txt  imagenet_raw_class.txt  label_name_to_id.txt  my_add.onnx  requirements.txt  sonar-project.properties
0-1.Basic/: 01_basics.py  02_manual_gradient.py  05_linear_regression.py  09_2_softmax_mnist.py  0_0_basic_function.py  0_16_softmax_mnist.py  0_19_Pack_pad.py  0_1_datasplit.py  0_4_lr_adjust.py  1_5_softmax_mnist.py  bceloss.py  temprnn.py
1-1.RNN/: 12_4_hello_rnn_emb.py  13_1_rnn_classification_basics.py  13_2_rnn_classification.py  13_3_char_rnn.py  1_2_rnncell.py  1_3_RNN_API.py  1_4_RNN_Embed.py  1_5_LSTM_API.py  1_5_LSTM_embedding.py  1_6_GRU_API.py  1_9_RNN_Classification.py  rnn.py
1-2.Bi-LSTM/: Bi-LSTM-Torch.py  Bi_LSTM_Attention.py
2-1.NNLM/: NNLM-Torch.py
3-2.TextLSTM/: TextLSTM-Torch.py
3-3.TextCNN/: TextCNN-Torch.py
4-1.Seq2Seq/: 1 - Sequence to Sequence Learning with Neural Networks.py  13_4_pack_pad.py  14_1_seq2seq.py  14_2_seq2seq_att.py  2 - Learning Phrase Representations using RNN Encoder-Decoder for Statistical Machine Translation.py  3 - Neural Machine Translation by Jointly Learning to Align and Translate.py  4_0_2_Seq2Seq.py  4_0_2_Seq2Seq_Advance.py  4_0_3_Seq2Seq_EncoderDecoder.py  4_0_3_learning_pharse_representations_using_rnn_encode_decode_for_statical_machine_translation.py  4_0_4_Seq2Seq_Translation.py  4_1_1_Pack_Padded.py  4_1_3_Seq2Seq_intro.py  4_1_pack_padded.py  4_2_pack_pad.py  4_3_Seq2Seq_intro.py  4_3_seq2seq.py  4_4_Seq2Seq_Translation.py  4_4_seq2seq_translation.py  4_5_Seq2Seq_Attention.py  Seq2Seq-Torch.py  seq2seq_models.py
4-2.Seq2Seq_Attention/: 4 _2_3_Seq2Seq_Padded_ Mask_BLEU.py  4-2-3_attention.py  4_2_1_Seq2Seq_Attention_Dot.py  4_2_1_neural_machine_translation_by_jointly_learning_to_align_and_translate.py  4_2_2_Seq2Seq_Attention_Concat.py  4_2_2_Seq2Seq_Summary.py  4_2_3_Seq2Seq_Attention_Baha2.py  4_2_3_attention.py  4_2_4_Seq2Seq_Padded_ Mask_BLEU.py  4_2_4_Seq2Seq_Summary.py  4_2_5_Seq2Seq_Summary.py  Seq2Seq_Attention_Tensor.py  Seq2Seq_Attention_Torch.py  attention.md  seq2seq_attention.py
4-3.Bi-LSTM_Attention/: 4_3_1_Bi-LSTM_Attention_Torch.py  Bi-LSTM_Attention_Torch.py  attentionRNN.py
5-1.Transformer/: 5_1_1_Transformer_paper.py  5_1_2_Transformer(Greedy_decoder)-Torch.py  5_1_2_Transformer-Torch.py  5_1_3_Transformer(Greedy_decoder)-Torch.py  5_1_3_Transformer-Torch.py  Transformer(Greedy_decoder)_Torch.ipynb
5-2.BERT/: 5_2_BERT-Torch.py  BERT-Torch.py
6-1.IMG/: 6_10_customTrain_Resnet.py  6_10_customTrain_Vgg.py  6_10_finetune_resnet.py  6_11_TransferLearning.py  6_11_TransferLearning_0.py  6_11_TransferLearning_1.py  6_11_TransferLearning_2.py  6_11_TransferLearning_3.py  6_12_FreezeLayer.py  6_12_FreezeLayer_Intro_1.py  6_1_img_process.py  6_2_Dataset.py  6_3_AlexNet.py  6_5_VGGNet_advance.py  6_6_ResNet.py  6_6_ResNet_advance.py  6_7_Inception_v1.py  6_8_customTrain.py  6_8_tinyNetwork.py  6_9_Finetune.py  6_9_customTrain.py  6_9_tinyNetwork.py  cailproj.py
CV/: readme.md
Calculate_quantity/: according_model_calculate_param.py
Colorful_Print/: README.md  setup.py
Deploy/: 1_super_resolution.py  custom_operator.py  example1_deploy.py  example2_deplpy.py  example3_deploy.py  model_to_onnx.py  onnx_runtime.py  session_onnxruntime.py  tempCodeRunnerFile.py  test_onnx.py  valid_onnx_model.py
Deploy/custom_library/lib/: CMakeLists.txt
Deploy/custom_operator_add/ort_custom_op/: CMakeLists.txt  custom_op.cc  custom_op.h  custom_op_test.cc
Deploy/custom_operator_complicated/custom_library_single/: CMakeLists.txt
Deploy/custom_operator_complicated/custom_operator_without_template/: CMakeLists.bak.txt  CMakeLists.txt  custom_op.bak.cc  custom_op.bak.h  custom_op.cc  custom_op.h  custom_op_test.cc  hello.cpp  lang_ops.cc  lang_ops.h
ONNX_GraphSurgon/: 1_onnx_graphsurgon_demo_clip.py  2_layernorm_fuse.py  3_onnx_operator_list.py
Pocket_Lab/: amap_test.py  amp.py  calc_param_resnet50.py  load_model.py  torchCheckpoint.py  voxelization.py
Quantification/: 1_quant_implement_qat_example.py  2_according_model_calculate_param.py
Quantity/: 1_quant_implement_example.py  1_quant_implement_qat_example.py  2_according_model_calculate_param.py  3_draw_data_distribution.py  according_model_calculate_param.py  quant_example.py  resnet50_1.py  throughput.py
Quantization/: 3_draw_data_distribution.py
Reference/: codegeex.py  dataDrawing.ipynb  readme.md  txt_to_csv.py
Tensorrt/: 1_intro_tensorrt.ipynb
Tools/: Inference_model_calc_FPS.py  ONNXConvertToONNXSimplify.py  calc_acc.py  change_onnx_output_type.py  expand_output_tensor_dim.py  export_classify_demo.py  file_label.py  img_name_rename.py  img_resize_crop_gridsample.py  inference_cpu_only.py  inference_gpu_only.py  jpg2bmp.py  logger_handle.py  logger_handle_asyncLogger.py  mlvpool.py  onnx_model_convert_onnxSimplify.py  qaic_jmg_to_raw.py  qnn_generate_raw.py  re_match.py  read_bin_file.py  ti_convert_bmp_to_bin.py  ti_generate_test_txt_file.py  ti_tools_jpg2bmp.py  txt_convert_json.py  val_imagenet_label.txt
Torch_experiment/: 1_1_img_preprocess.py  1_2_convert_output_bchw_to_bhwc.py  1_3_print_model_input_shape_layer_struct.py  1_6_calc_map_with_pycoco.py  1_7_4_use_onnxruntime_infer_bev.py  1_9_imagenet_generator_bin_file.py  2_1_center_id.py  2_1_topk_func.py  2_2_quant_example.py  2_3_quant_example_2.py  Train_Model.ipynb
Troch_experiment/: 1_8_analysis_bin_file.py  2_1_TransferLearning_save_load_model_param.py  2_4_TransferLearning_custom_layer_retrain.py
pytorch-seq2seq/: 1 - Sequence to Sequence Learning with Neural Networks.ipynb  1_1_seq2seq_learning.ipynb  2_1_Learning_phrase_presentation_using_rnn_encoder_decoder.ipynb  3 - Neural Machine Translation by Jointly Learning to Align and Translate.ipynb  4 - Packed Padded Sequences, Masking, Inference and BLEU.ipynb  Untitled.ipynb  (+4 more)
(+537 files in other folders)
